--- a/RadiUpdate.html
+++ b/RadiUpdate.html
@@ -1,1 +1,1 @@
-[{"title":"New update available","message":"Fixed minor bug","version":"1.2","url":"https://youtube.com/c/StoneXGaming"}]
+[{"title":"New update available","message":"Fixed minor bug","version":"1.2","url":"https://raw.githubusercontent.com/XeloSXG/AppUpdate/main/RadiUpdate.html"}]
