--- a/RadiUpdate.html
+++ b/RadiUpdate.html
@@ -1,1 +1,4 @@
-[{ "message":"Fixed minor bug","version":"1.2","url":"https://raw.githubusercontent.com/XeloSXG/AppUpdate/main/RadiUpdate.html"}]
+[{ "message":"Fixed minor bug",
+"version":"1.2",
+"url":"https://raw.githubusercontent.com/XeloSXG/AppUpdate/main/RadiUpdate.html"
+}]
